--- a/style.css
+++ b/style.css
@@ -7,72 +7,100 @@
 }
 
 body {
-    background: #eaeaea;
+    background: #EAEAEA;
     font-family: 'Roboto', sans-serif;
 }
 
 h1 {
     font-size: 1.75rem;
+    color: #1B1B1B;
 }
 
 h2 {
     font-size: 1.25rem;
+    color: #1B1B1B;
 }
 
 li, p {
     font-size: 1rem;
 }
 
-header {
-    background-color: #ffffff;
-    width: 80%;
-    margin-left:10%;
-    padding-left: 5%;
-    padding-right: 5%;
-    display: flex;
+a {
+   text-decoration: none; 
 }
 
 header {
     display: flex;
     flex-direction: column;
-    border-radius: 14px 14px 0 0;
+    border-radius: 0.875rem 0.875rem 0 0;
     align-items: center;
     margin-top: 1rem;
     text-align: center;
+    background-color: #FFF;
+    width: 80vw;
+    margin-left: 10vw;
+    padding: 0 5vw;
+    display: flex;
+}
+
+.header h1 {
+    padding: 2.5rem 0 1rem 0;
 }
 
 header img {
-    border-radius: 10px;
-    width: 950px;
-    height: 200px;
+    border-radius: 0.625rem;
+    width: 74vw;
+    height: 12.5rem;
     object-fit: cover;
 }
 
 header figcaption {
     text-align: end;
+    color:  #8F8F8F;
+    font-size: 0.75rem;
 }
 
 article {
-    background-color: #ffffff;
-    width: 80%;
-    margin-left:10%;
-    padding-left: 5%;
-    padding-right: 5%;
+    background-color: #FFF;
+    line-height: 2.5rem;
+    width: 80vw;
+    margin-left:10vw;
+    padding-top: 1.625rem 0;
+    padding: 0 5vw;
+    border-radius: 0 0 0.875rem 0.875rem;
 }
 
 article h2 {
     display: flex;
     justify-content: center;
-
+    padding: 1.625rem 0;
 }
 
-li {
-    line-height: 1.75rem;
+.additionalInformation {
+    padding-bottom: 1.625rem;  
 }
 
-footer {
+.credits {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 8px;
+    margin: 0.5rem;
+    color:  #8F8F8F;
+    font-size: .75rem;
+    padding-top: 1.625rem;
+}
+
+.credits ul {
+    display: flex;
+    gap: .5rem;
+    list-style: none;
+    padding-left: .5rem;
+    align-items: center;
+}
+
+.credits img {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    padding-bottom: .75rem;
 }
